cmake_minimum_required(VERSION 2.8.3)
project(pick_objects)

## Cleaner code

## Compile as C++11, supported in ROS Kinetic and newer
add_compile_options(-std=c++11)

find_package(catkin REQUIRED COMPONENTS
 actionlib
 move_base_msgs
 roscpp
)

catkin_package ()

include_directories(include ${catkin_INCLUDE_DIRS})

add_executable(pick_objects src/pick_objects.cpp)
target_link_libraries(pick_objects ${catkin_LIBRARIES})
add_dependencies(pick_objects pick_objects_generate_messages_cpp)

